# C_matrix

./: CMakeLists.txt  exsamples.txt
apps/: CMakeLists.txt  main.c
include/: complex_num.h  errors.h  inout.h  io.h  matrix.h  matrix_info.h
src/: CMakeLists.txt  complex_num.c  complex_num.cpp  inout.c  io.c  main.c  matrix.c  matrix.cpp  matrix_info.c  matrix_info.cpp
tests/: CMakeLists.txt  Makefile  test_matrix.c
